ray-services/ingress/ingress-cpu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llama-3-8b-cpu-llama-serve-ingress
  namespace: kuberay-system  
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: "llama-cpp-cpu-lb"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: "8265"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ray-service-llamacpp-serve-svc
            port:
              number: 8000
